<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
    <TextView
            android:id="@+id/login_mess1"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tip1"
        />
    <TextView
            android:id="@+id/login_mess2"
            android:layout_marginTop="120dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tip2"
            android:layout_below="@id/login_mess1"
            />
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/login_mess2"
         android:orientation="vertical"
         android:gravity="bottom"
        >
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                />
        </LinearLayout>
</RelativeLayout>