<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
        >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/login1"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_id"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_id"
        />
    <EditText
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:password="true"
            android:hint="@string/login_pass"
        />

</LinearLayout>